change to raft function